[package]
name = "settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
log = "0.4.17"
ron = "0.8.0"
serde = "1.0.143"
thiserror = "1.0.32"

[dev-dependencies]
tempfile = "3.3.0"
